--- a/packages/frontend/src/components/Buttons/UtilButton/UtilButton.css
+++ b/packages/frontend/src/components/Buttons/UtilButton/UtilButton.css
@@ -1,5 +1,5 @@
 button.util-button {
-    top: calc(var(--distance-from-edge-default) + 50px);
+    top: calc(var(--distance-from-edge-default) + 65px);
     left: var(--distance-from-edge-default);
     display: flex;
     align-items: center;
